# fft_on_riscv

./: .gitignore  CMakeLists.txt  README.md  compile.sh  shared_benchmark.sh
benchmark/: run_fftw_mpi.sh  run_fftw_mpi_local.sh  run_fftw_mpi_omp.sh  run_fftw_omp.sh  run_fftw_shared.sh
benchmark/plans/: plan_fftw_threads.txt  plan_hpx_loop_shared.txt
benchmark/result/: runtimes_fftw_threads.txt  runtimes_hpx_loop_shared.txt  runtimes_hpx_task_opt_shared.txt  runtimes_hpx_task_sync_shared.txt
fftw_scripts/: install_fftw_seq.sh  install_fftw_threads_mpi.sh
fftw_scripts/epyc/: install_fftw_hpx.sh  install_fftw_omp_mpi.sh  install_fftw_threads_mpi.sh
fftw_scripts/riscv/: install_fftw_hpx.sh  install_fftw_hpx_riscv.sh  install_fftw_omp_mpi.sh  install_fftw_omp_mpi_riscv.sh  install_fftw_threads_mpi.sh  install_fftw_threads_mpi_riscv.sh
fftw_scripts/x86/: install_fftw_omp_mpi.sh
hpx_scripts/: install_hpx_mpi.sh  install_hpx_mpi_riscv.sh
hpx_scripts/build-scripts/: build-all.sh  build-boost.sh  build-cmake.sh  build-hpx.sh  build-jemalloc.sh  config.sh  gcc-config.sh
src/: fft_hpx_loop_shared.cpp  fft_hpx_task_naive_shared.cpp  fft_hpx_task_shared.cpp  fft_hpx_task_sync_shared.cpp
